# wled-json-api-library

./: Cargo.toml  README.md
examples/: basic_example.rs  basic_getter.rs
src/: errors.rs  info.rs  lib.rs  state.rs  wled.rs
src/structures/: cfg.rs  effects.rs  info.rs  live.rs  mod.rs  net.rs  nodes.rs  palettes.rs  palx.rs  state.rs  state_info.rs  temp delete me.rs
src/structures/cfg/: cfg_ap.rs  cfg_def.rs  cfg_dmx.rs  cfg_eth.rs  cfg_hw.rs  cfg_id.rs  cfg_if2.rs  cfg_light.rs  cfg_nw.rs  cfg_ol.rs  cfg_ota.rs  cfg_remote.rs  cfg_timers.rs  cfg_wifi.rs  mod.rs
src/structures/cfg/cfg_hw/: cfg_hw_led.rs  mod.rs
