[package]
name = "wled-json-api-library"
version = "0.1.5"
edition = "2021"
license = "MIT"
keywords = ["protocol", "json", "pixel", "wled", "api"]
categories = ["network-programming", "api-bindings"]
description = "WLED Json API in rust. Made with WLED ~14.0, but should work for more"
repository = "https://github.com/paulwrath1223/wled-json-api-library"


[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["gzip", "blocking"] }
serde_repr = "0.1.17"
thiserror = "1.0.50"
